--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,10 +27,10 @@ repos:
     -   id: pyupgrade
 
 -   repo: https://github.com/ambv/black
-    rev: stable
+    rev: 22.3.0
     hooks:
     - id: black
-      language_version: python3.6
+      language_version: python3.7
 
 # -   repo: https://github.com/pre-commit/mirrors-mypy
 #     rev: v0.660
